fix issue of oath button misalignment

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -118,7 +118,7 @@ input:focus {
 	top: 0;
 	left: 0;
 	height: 140px;
-	width: 215px;
+	width: 200px;
 	position: absolute;
 	text-align: center;
 	background-color: white;
